--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,10 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-/[Bb]uild/
+#/[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-# /Builds/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
